--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ beautifulsoup4 = "^4.9.3"
 lxml = "^4.6.3"
 azure-core = "^1.16.0"
 azure-storage-blob = "^12.8.1"
+azure-keyvault-secrets = "^4.3.0"
+azure-identity = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 
