--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ azure-core = "^1.16.0"
 azure-storage-blob = "^12.8.1"
 azure-keyvault-secrets = "^4.3.0"
 azure-identity = "^1.6.0"
+python-dotenv = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 
