--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ azure-storage-blob = "^12.8.1"
 azure-keyvault-secrets = "^4.3.0"
 azure-identity = "^1.6.0"
 python-dotenv = "^0.19.0"
+psycopg2 = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 
